Remove commented-out stuff (d'oh)

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 <body style="padding: 15px;">
 
-<div class="container" id="main"><!-- style="margin-left: 5px;">-->
+<div class="container" id="main">
 <h1>Secure Dropbox<br/><small>@ rpj.me</small></h1>
 <br/>
 <span class="lead">Choose your files:<br/></span>
@@ -35,9 +35,6 @@
 <br/><br/>
 
 <div id="result" style="font-weight: bold; display: none;">
-<!--
-<progress value="0" max="100" id="progress"  />
--->
 <div class="progress progress-success active progress-striped" style="width: 250px;">
     <div class="bar" id="progress" style="width: 0%"></div>
 </div>
