Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 <li>Second-stage decryption will be done with the GPG keypair for the recipient specified in the server config.</li>
 </ul>
 </li>
-</ul>
+</ul><h1>Demo</h1>
+
+<p>(Client-side only. Unless you send me the password I'll never see the files.)</p>
+
+<p><a href="http://sec.rpj.me">http://sec.rpj.me</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/rpj">rpj</a></p>
